<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/onelinecontactlayout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="1sp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/layout_bg">

        <ImageView android:id="@+id/iv_photoview"
            android:layout_width="60sp"
            android:layout_height="60sp"
            android:layout_marginStart="25sp"
            android:src="@drawable/ic_action_person"
            android:layout_centerVertical="true"
            />

    <LinearLayout
        android:layout_centerVertical="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_toStartOf="@id/btn_edit"
        android:layout_toEndOf="@id/iv_photoview"
        android:padding="12dp">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <TextView  android:id="@+id/tv_nametext"
                android:layout_width="35sp"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="12sp"
                android:textStyle="italic"
                />

            <TextView android:id="@+id/tv_nameview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textStyle="bold"
                />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <TextView  android:id="@+id/tv_phonenumtext"
                android:layout_width="80sp"
                android:layout_height="wrap_content"
                android:text="@string/phone_number"
                android:textSize="12sp"
                android:textStyle="italic"
                />

            <TextView android:id="@+id/tv_phonenumview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textStyle="bold"
                />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <TextView  android:id="@+id/tv_emailtext"
                android:layout_width="35sp"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="12sp"
                android:textStyle="italic"
                />

            <TextView android:id="@+id/tv_emailview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textStyle="bold"
                />

        </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <TextView  android:id="@+id/tv_worktext"
                android:layout_width="100sp"
                android:layout_height="wrap_content"
                android:text="@string/work_contact"
                android:textSize="12sp"
                android:textStyle="italic"
                />

                <TextView android:id="@+id/tv_workview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textStyle="bold"
                />

            </LinearLayout>

        </LinearLayout>

        <ImageView android:id="@+id/btn_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="20sp"
            android:layout_marginTop="10sp"
            android:src="@drawable/ic_action_editcontact"
            />

        <ImageView android:id="@+id/btn_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/btn_edit"
            android:layout_marginEnd="20sp"
            android:layout_marginTop="20sp"
            android:src="@drawable/ic_action_deletecontact"
            />
    </RelativeLayout>
</androidx.cardview.widget.CardView>